20exercise: Button ripple

--- a/19-theme-clock/clock.html
+++ b/19-theme-clock/clock.html
@@ -10,7 +10,7 @@
 </head>
 <body class="dark">
 
-  <button>Dark Mode</button>
+  <button>Light Mode</button>
   <section class="analog-clock">
     <div class="hand second"></div>
     <div class="hand minute"></div>
